--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,33 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = 'https://datable.tuba-lyon.com/'
+languageCode = 'fr-fr'
+title = 'Datable par Tubā'
 theme = 'ananke'
+DefaultContentLanguage = "fr"
+
+SectionPagesMenu = "main"
+
+Paginate = 10 
+
+enableRobotsTXT = true
+
+[sitemap]
+  changefreq = "weekly"
+  priority = 0.5
+  filename = "sitemap.xml"
+
+[params]
+  description = "Veille Data dans le cadre de l’animation de l'écosystème des données"
+  text_color = ""
+  author = ""
+  favicon = ""
+  site_logo = ""
+  # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  recent_posts_number = 3
+  rss = "/index.xml"
+  AuthorName = "Philippe Lemaire"
+
+
+[[params.ananke_socials]]
+name = "mastodon"
+url = "https://ludosphere.fr/@phil"
